delete functionality added & overflow problem solved

--- a/survey_form/src/components/Dashboard/Dashboard.css
+++ b/survey_form/src/components/Dashboard/Dashboard.css
@@ -117,7 +117,7 @@ tr:nth-child(even) {
 }
 
 .search-input {
-  margin-left: 100px;
+  margin-left: 58px;
   margin-top: 10px;
   padding: 8px;
   border: 1px solid #ccc;
@@ -140,7 +140,7 @@ tr:nth-child(even) {
   display: flex;
   align-items: center;
   margin-top: 8px;
-  margin-right: 40px;
+  margin-right:0px;
 }
 
 .icons {
@@ -165,4 +165,9 @@ tr:nth-child(even) {
 }
 .table{
   margin-left: 60px;
+}
+
+.main-content{
+  width: 89%;
+  margin-left: 50px;
 }
